gccida/c1/invert_truthvalue
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3292:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3294:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3297:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v6; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3301:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v10; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3302:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3304:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v13; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3307:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v16; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3308:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3309:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3311:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3314:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v23; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3342:32: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v6 = invert_tree_comparison( ( tree_code)*( ( unsigned __int8 *)&arg->block.common + 16)); 
                               ^~~~~~~~~
                               tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3342:42: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
v6 = invert_tree_comparison( ( tree_code)*( ( unsigned __int8 *)&arg->block.common + 16)); 
                             ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3343:17: error: expected expression
v9 = *( _OWORD *)&arg->block.vars; 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/fold-const.c:3343:9: error: use of undeclared identifier '_OWORD'
v9 = *( _OWORD *)&arg->block.vars; 
        ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/invert_truthvalue/src/obj/fold-const.o] Error 1
